--- a/docs/src/content/docs/reference/defaults.mdx
+++ b/docs/src/content/docs/reference/defaults.mdx
@@ -57,5 +57,10 @@ resources created by the DLZ:
 
 A comprehensive list of defaults referenced throughout the documentation:
 
+- [Defaults.denyServiceList](/components/account-management/budgets#defaults): Creates two budgets, one for the organization
 - [Defaults.budgets](/components/account-management/budgets#defaults): Creates two budgets, one for the organization
 and another for the DLZ-managed resources.
+- [Defaults.vpcClassB3Private3Public](/components/networking/vpcs#defaults): Creates a VPC with three public and three
+private subnets in the `eu-west-1` region.
+- [Defaults.denyServiceList](/components/security/service-deny-list#defaults): Creates a list of services that should
+be denied by default.
