--- a/docs/src/content/docs/components/networking/vpcs.mdx
+++ b/docs/src/content/docs/components/networking/vpcs.mdx
@@ -193,6 +193,92 @@ approximately 8k hosts per subnet.
   </Fragment>
 </DualCode>
 
+## Defaults
+
+The `Defaults.vpcClassB3Private3Public` function creates a VPC with a CIDR block of `10.x.0.0/16`, where `x` can be
+specified. It creates two route tables; one for public subnets and one for private subnets, each containing three
+subnets. Each subnet is assigned a `/19` CIDR block. The VPC CIDR block is divided into eight subnets, with six in use
+and two `/19` blocks reserved for future expansion. The specified region determines the availability zones for the
+subnets.
+
+<DualCode>
+  <Fragment slot="ts">
+    ```ts {25}
+    import {App} from 'aws-cdk-lib';
+    import { DataLandingZone } from 'aws-data-landing-zone';
+
+    const app = new App();
+    const dlz = new DataLandingZone(app, {
+      ...
+      organization: {
+        ...
+          workloads: {
+            accounts: [{
+                name: 'development',
+                vpcs: [
+                  Defaults.vpcClassB3Private3Public(0, Region.EU_WEST_1),
+              ]
+          },
+       },
+       ...
+     }
+    });
+    ```
+  </Fragment>
+  <Fragment slot="python">
+    ```python {25}
+    #!/usr/bin/env python3
+    import aws_cdk as cdk
+    import aws_data_landing_zone as dlz
+
+    app = cdk.App()
+    dlz.DataLandingZone(app,
+        ...
+        organization=dlz.DLzOrganization(
+            ous=dlz.OrgOus(
+                ...
+                workloads=dlz.OrgOuWorkloads(
+                    accounts=[
+                        dlz.DLzAccount(
+                            name='development',
+                            vpcs: [
+                                dlz.Defaults.vpc_class_b3_private3_public(0, dlz.Region.EU_WEST_1),
+                            ]
+                            ...
+                        ),
+                    ],
+                ),
+            )
+        ),
+    )
+````
+  </Fragment>
+</DualCode>
+
+## Exported SSM Parameters
+
+Each VPC generates the following parameters in the SSM Parameter Store:
+- `/dlz/networking-entity/vpc/<account-name>.<region>.<vpc-name>/id`: The VPC ID.
+- `/dlz/networking-entity/vpc/<account-name>.<region>.<vpc-name>.<route-table-name>/id`: The route table ID for each route table.
+- `/dlz/networking-entity/vpc/<account-name>.<region>.<vpc-name>.<route-table-name>.<subnet-name>/id`: The subnet ID for each subnet.
+
+For instance, the `Defaults.vpcClassB3Private3Public(0, Regions.EU_WEST_1)` function creates a VPC named `default` in
+the `eu-west-1` region. This VPC has a CIDR block of `10.0.0.0/16`, two route tables (`private` and `public`), and six
+subnets named `private-1`, `private-2`, `private-3`, `public-1`, `public-2`, and `public-3`.
+
+The following parameters will be created in the account for this VPC:
+- VPC parameters:
+  - `/dlz/networking-entity/vpc/development.eu-west-1.default/id`
+- Route table parameters:
+  - `/dlz/networking-entity/vpc/development.eu-west-1.default.private/id`
+  - `/dlz/networking-entity/vpc/development.eu-west-1.default.public/id`
+- Subnet parameters:
+  - `/dlz/networking-entity/vpc/development.eu-west-1.default.private.private-1/id`
+  - `/dlz/networking-entity/vpc/development.eu-west-1.default.private.private-2/id`
+  - `/dlz/networking-entity/vpc/development.eu-west-1.default.private.private-3/id`
+  - `/dlz/networking-entity/vpc/development.eu-west-1.default.public.public-1/id`
+  - `/dlz/networking-entity/vpc/development.eu-west-1.default.public.public-2/id`
+  - `/dlz/networking-entity/vpc/development.eu-west-1.default.public/public-3/id`
 
 ## API References
 - [DlzVpcProps](/reference/api#dlzvpcprops)
