docs: added security docs and escape hatches

--- a/docs/src/content/docs/reference/defaults.mdx
+++ b/docs/src/content/docs/reference/defaults.mdx
@@ -64,3 +64,5 @@ and another for the DLZ-managed resources.
 private subnets in the `eu-west-1` region.
 - [Defaults.denyServiceList](/components/security/service-deny-list#defaults): Creates a list of services that should
 be denied by default.
+- [Defaults.rootControls](/components/security/control-tower-controls#defaults): Specifies a list of commonly used
+Control Tower Controls based on best practices and data management.
