docs: iam identity center

--- a/docs/src/content/docs/sops/account-setup.mdx
+++ b/docs/src/content/docs/sops/account-setup.mdx
@@ -1,6 +1,6 @@
 ---
-title: SOP - Account Setup
-description: SOP - Account Setup
+title: Account Setup
+description: Account Setup
 ---
 
 This Standard Operating Procedure (SOP) provides a once-off guide for enabling and configuring various AWS services
