--- a/docs/src/content/docs/sops/add-account.mdx
+++ b/docs/src/content/docs/sops/add-account.mdx
@@ -1,8 +1,8 @@
 ---
-title: SOP - Control Tower Setup
-description: SOP - Control Tower Setup
+title: Add Account
+description: Add Account
 ---
-import DualCode from '../../../../components/DualCode.astro';
+import DualCode from '../../../components/DualCode.astro';
 
 This Standard Operating Procedure (SOP) provides a guide on how to add a new or existing account to AWS Control Tower.
 
