--- a/docs/src/content/docs/sops/initial-control-tower-setup.mdx
+++ b/docs/src/content/docs/sops/initial-control-tower-setup.mdx
@@ -1,8 +1,11 @@
 ---
-title: SOP - Control Tower Setup
-description: SOP - Control Tower Setup
+title: Control Tower Setup
+description: Control Tower Setup
 ---
-import DualCode from '../../../../components/DualCode.astro';
+import DualCode from '../../../components/DualCode.astro';
+
+This Standard Operating Procedure (SOP) provides a once-off guide for enabling and configuring AWS Control Tower to
+integrate with the Data Landing Zone (DLZ).
 
 [AWS Control Tower](https://docs.aws.amazon.com/controltower/latest/userguide/what-is-control-tower.html) provides
 a streamlined way to set up and govern a multi-account AWS environment, adhering to AWS best practices.
