--- a/docs/src/content/docs/components/networking/vpcs.mdx
+++ b/docs/src/content/docs/components/networking/vpcs.mdx
@@ -9,7 +9,7 @@ enforces non-overlapping CIDR ranges across VPCs within the same account and acr
 
 :::note
 Ensure that default VPC creation is disabled when setting up accounts with Control Tower, as outlined in the
-[SOP - Add Account](/components/account-management/sop-add-account). All VPCs are defined programmatically by the DLZ.
+[SOP - Add Account](/sop/add-account). All VPCs are defined programmatically by the DLZ.
 :::
 
 The DLZ enables precise control over VPCs, subnets, and route tables. Each VPC, route table, and subnet is named to
