--- a/docs/src/content/docs/sop/initial-control-tower-setup.mdx
+++ b/docs/src/content/docs/sop/initial-control-tower-setup.mdx
@@ -86,7 +86,7 @@ to disable VPC creation:
 
 ## Optionally create workload accounts
 
-Follow the [SOP - Add Account](sop-add-account) to create new accounts or enroll existing accounts under the `Workloads` OU.
+Follow the [SOP - Add Account](add-account) to create new accounts or enroll existing accounts under the `Workloads` OU.
 
 ## Gather the required information for DLZ
 
