--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -1,9 +1,9 @@
 ---
 title: Data Landing Zone
-description: Data Landing Zone (DLZ) is CDK Construct of an opinionated Landing Zone that is built to support and enabled AI, data, data mesh and general purpose projects.
+description: The Data Landing Zone (DLZ) is a CDK Construct designed to create a landing zone tailored for supporting and enabling AI, data-driven, data mesh, and cloud projects.
 template: splash
 hero:
-  tagline: Data Landing Zone (DLZ) is CDK Construct of an opinionated Landing Zone that is built to support and enabled AI, data, data mesh and general purpose projects.
+  tagline: The Data Landing Zone (DLZ) is a CDK Construct designed to create a landing zone tailored for supporting and enabling AI, data-driven, data mesh, and cloud projects.
   image:
     light: ../../assets/data_landing_zone_logo.png
     dark: ../../assets/data_landing_zone_logo-white.png
