--- a/docs/src/content/docs/introduction.mdx
+++ b/docs/src/content/docs/introduction.mdx
@@ -17,6 +17,21 @@ The CDK construct is available in both TypeScript and Python. Example GitHub rep
 - [TypeScript Example GitHub Repo](https://github.com/DataChefHQ/aws-data-landing-zone-example-typescript)
 - [Python Example GitHub Repo](https://github.com/DataChefHQ/aws-data-landing-zone-example-python)
 
+## Why do you need a Landing Zone?
+Setting up your AWS environment without a Landing Zone can be an overwhelming and time-consuming process. Without the
+right foundation in place, you'll face unnecessary complexity and delays. Managing multiple AWS accounts,
+implementing security best practices, and ensuring compliance will require a deep level of expertise and
+effort.
+
+Here's why a properly implemented Landing Zone is essential for accelerating your cloud journey:
+
+- **👩‍💻 Expert Knowledge:** To build a robust, scalable AWS environment, you need expertise in areas such as cloud architecture, IAM, networking, and cost optimization. A Landing Zone provides the necessary tools, templates, and automation, removing the need for constant, high-level expertise.
+- **📈 Scalability:** As your business grows, your cloud environment needs to grow with it. A Landing Zone ensures scalability and flexibility to meet future needs without compromising performance or security.
+- **⚡ Reduce Time To Market:** A well-architected Landing Zone streamlines account setup, networking, and security, ensuring a faster, more reliable deployment. Leaving you to focus on your Applications and not the cloud itself.
+- **🔧 Reduced Complexity:** With pre-configured guardrails and best practices, you avoid reinventing the wheel each time a new service or account is needed.
+- **🔒 Security and Compliance:** Landing Zones integrate security measures based on the AWS Well-Architected Framework, ensuring your environment is aligned with best practices for security, compliance, and risk management.
+
+
 ## Key Features
 
 Notable features of the DLZ include:
