--- a/docs/src/content/docs/components/account-management/accounts.mdx
+++ b/docs/src/content/docs/components/account-management/accounts.mdx
@@ -9,9 +9,10 @@ replacing or conflicting with it. Control Tower and AWS Organization setup must 
 define Control Tower and accounts within CDK but instead accepts the IDs of these entities. This approach allows DLZ
 to be easily integrated into both existing Control Tower configurations and new (greenfield) setups.
 
-
 AWS Control Tower automatically creates two accounts, `Audit` and `Log Archive`, under the `Security` Organizational
 Unit (OU). In addition to these, DLZ requires two manually created OUs: `Workloads` and `Suspended`.
+
+## Workload OU
 
 The `Workloads` OU is designed to house all AWS accounts according to your organization's specific needs. For instance:
 
@@ -133,6 +134,181 @@ for two accounts in the `Workloads` OU. Additional accounts can be added as need
 ````
   </Fragment>
 </DualCode>
+
+## Suspended OU
+
+In the CDK code, workload accounts that are no longer required can be moved to the `Suspended` Organizational Unit (OU).
+When an account is moved to the `Suspended` OU, no resources are deleted. All CloudFormation stacks, resources, and
+data remain preserved. The account is essentially quarantined using a Service Control Policy (SCP) that blocks all AWS
+API actions.
+
+Accounts can be moved within the CDK, between the `workloads` and `suspended` OUs as shown below.
+
+<DualCode>
+  <Fragment slot="ts">
+    Before moving the `development` account:
+    ```ts
+    import {App} from 'aws-cdk-lib';
+    import { DataLandingZone } from 'aws-data-landing-zone';
+
+    const app = new App();
+    const dlz = new DataLandingZone(app, {
+      ...
+      organization: {
+        organizationId: 'o-0f5h921gk9',
+        root: { ... },
+        ous: {
+          security: { ... },
+          workloads: {
+            ouId: 'ou-h2l0-gjr36ikn',
+            accounts: [{
+                name: 'development',
+                accountId: '123456789012',
+                type: DlzAccountType.DEVELOP,
+                ...
+              },{
+                name: 'production',
+                accountId: '123456789012',
+                type: DlzAccountType.PRODUCTION,
+                ...
+              }]
+          },
+          suspended: {
+            ouId: 'ou-vh4d-rhcmfj2s',
+          },
+       },
+       ...
+     }
+    });
+    ```
+
+    After moving the `development` account:
+    ```ts
+    import {App} from 'aws-cdk-lib';
+    import { DataLandingZone } from 'aws-data-landing-zone';
+
+    const app = new App();
+    const dlz = new DataLandingZone(app, {
+      ...
+      organization: {
+        organizationId: 'o-0f5h921gk9',
+        root: { ... },
+        ous: {
+          security: { ... },
+          workloads: {
+            ouId: 'ou-h2l0-gjr36ikn',
+            accounts: [{
+                name: 'production',
+                accountId: '123456789012',
+                type: DlzAccountType.PRODUCTION,
+                ...
+              }]
+          },
+          suspended: {
+            ouId: 'ou-vh4d-rhcmfj2s',
+            accounts: [{
+                name: 'development',
+                accountId: '123456789012',
+              }]
+          },
+       },
+       ...
+     }
+    });
+    ```
+  </Fragment>
+
+  <Fragment slot="python">
+    Before moving the `development` account:
+    ```python
+    import aws_cdk as cdk
+    import aws_data_landing_zone as dlz
+
+    app = cdk.App()
+    dlz.DataLandingZone(app,
+        ...
+        organization=dlz.DLzOrganization(
+            organization_id='o-0f5h921gk9',
+            root=dlz.RootOptions(...),
+            ous=dlz.OrgOus(
+                security=dlz.OrgOuSecurity(...),
+                workloads=dlz.OrgOuWorkloads(
+                    ou_id='ou-h2l0-gjr36ikn',
+                    accounts=[
+                        dlz.DLzAccount(
+                            name='development',
+                            account_id='123456789012',
+                            type=dlz.DlzAccountType.DEVELOP,
+                        ),
+                        dlz.DLzAccount(
+                            name='production',
+                            account_id='123456789012',
+                            type=dlz.DlzAccountType.PRODUCTION,
+                        ),
+                    ],
+                ),
+                suspended=dlz.OrgOuWorkloads(
+                    ou_id='ou-vh4d-rhcmfj2s',
+                ),
+            )
+        ),
+    )
+    ````
+
+    After moving the `development` account:
+    ```python
+    import aws_cdk as cdk
+    import aws_data_landing_zone as dlz
+
+    app = cdk.App()
+    dlz.DataLandingZone(app,
+        ...
+        organization=dlz.DLzOrganization(
+            organization_id='o-0f5h921gk9',
+            root=dlz.RootOptions(...),
+            ous=dlz.OrgOus(
+                security=dlz.OrgOuSecurity(...),
+                workloads=dlz.OrgOuWorkloads(
+                    ou_id='ou-h2l0-gjr36ikn',
+                    accounts=[
+                        dlz.DLzAccount(
+                            name='production',
+                            account_id='123456789012',
+                            type=dlz.DlzAccountType.PRODUCTION,
+                        ),
+                    ],
+                ),
+                suspended=dlz.OrgOuWorkloads(
+                    ou_id='ou-vh4d-rhcmfj2s',
+                    accounts=[
+                        dlz.DLzAccount(
+                            name='development',
+                            account_id='123456789012'
+                        ),
+                    ],
+                ),
+            )
+        ),
+    )
+    ````
+  </Fragment>
+</DualCode>
+
+After moving an account to the `Suspended` OU, ensure that any weak references to the account and its resources are
+removed. These references are commonly found in the `network` block, particularly within the `nats`, `connections`, and
+`bastionHosts` sections. If these references are not cleared, the CDK will generate an error, indicating that the
+entity must be removed due to the invalid reference before being able to proceed.
+
+The `diff` and `deploy` [scripts](/reference/scripts-commands) execute an additional command after their respective CDK
+operations. This command checks whether any accounts in the `Suspended` Organizational Unit (OU) have CloudFormation
+stacks with names starting with `dlz-`. Such stacks indicate the presence of resources within the suspended account that
+could still incur costs.
+
+If any such stacks are detected, a warning is displayed in the console. It is the user's responsibility to review and
+remove any resources that are no longer needed.
+
+Refer to the [SOP - AWS Nuke](/sop/aws-nuke) page for instructions on how to use the AWS Nuke script and remove
+resources from suspended accounts.
 
 ## API References
 - [DataLandingZoneProps](/reference/api#datalandingzoneprops)
