--- a/docs/src/content/docs/reference/scripts-commands.mdx
+++ b/docs/src/content/docs/reference/scripts-commands.mdx
@@ -45,113 +45,144 @@ The `bootstrap` script, however, requires elevated permissions. The specified pr
 to the Management account and the ability to assume the `AWSControlTowerExecution` role created by AWS
 Control Tower. These permissions are highly privileged and should be handled with caution.
 
-### TypeScript Usage
+### Usage
 
-A complete example is available in the [TypeScript Example GitHub Repo](https://github.com/DataChefHQ/aws-data-landing-zone-example-typescript)
+Usage is demonstrated below for both TypeScript and Python.
 
-The code snippets below are from:
+<DualCode>
+  <Fragment slot="ts">
+    A complete example is available in the [TypeScript Example GitHub Repo](https://github.com/DataChefHQ/aws-data-landing-zone-example-typescript)
 
-- [/scripts](https://github.com/DataChefHQ/aws-data-landing-zone-example-typescript/tree/main/scripts)
-- [package.json](https://github.com/DataChefHQ/aws-data-landing-zone-example-typescript/tree/main/package.json)
+    The code snippets below are from:
 
-There are many ways to run scripts in a TypeScript project. Here, we’ll explore a simple and straightforward approach.
-Start by creating a `scripts` directory at the root of your project, and add individual TypeScript files, each
-containing the specific DLZ `Scripts` you want to execute.
+    - [/scripts](https://github.com/DataChefHQ/aws-data-landing-zone-example-typescript/tree/main/scripts)
+    - [package.json](https://github.com/DataChefHQ/aws-data-landing-zone-example-typescript/tree/main/package.json)
 
-```ts
-// scripts/bootstrap.ts
-import { Scripts } from "aws-data-landing-zone";
-import { config } from "../bin/minimum_config";
+    There are many ways to run scripts in a TypeScript project. Here, we’ll explore a simple and straightforward approach.
+    Start by creating a `scripts` directory at the root of your project, and add individual TypeScript files, each
+    containing the specific DLZ `Scripts` you want to execute.
 
-(async () => {
-  await (new Scripts()).boostrapAll(config);
-})();
-```
+    ```ts
+    // scripts/bootstrap.ts
+    import { Scripts } from "aws-data-landing-zone";
+    import { config } from "../bin/minimum_config";
 
-You can run the script using `npx ts-node`, which is typically included as a dev dependency in AWS CDK projects. To
-simplify the process, add a corresponding script to your `package.json`.
+    (async () => {
+      await (new Scripts()).boostrapAll(config);
+    })();
+    ```
 
-```json
-// package.json
-{
-  "scripts": {
-    "bootstrap": "npx ts-node --prefer-ts-exts scripts/bootstrap.ts"
-  }
-}
-```
+    You can run the script using `npx ts-node`, which is typically included as a dev dependency in AWS CDK projects. To
+    simplify the process, add a corresponding script to your `package.json`.
 
-You can then execute the script with:
-```
-npm run bootstrap
-```
+    ```json
+    // package.json
+    {
+      "scripts": {
+        "bootstrap": "npx ts-node --prefer-ts-exts scripts/bootstrap.ts"
+      }
+    }
+    ```
 
-The `bootstrapAll` function reads the DLZ configuration,
-including details such as AWS profiles, account IDs, and regions. It orchestrates the bootstrapping process for the
-management, security audit, security log, and workload accounts, ensuring they all trust the Management account.
+    You can then execute the script with:
+    ```
+    npm run bootstrap
+    ```
 
-#### Available Scripts
+    The `bootstrapAll` function reads the DLZ configuration,
+    including details such as AWS profiles, account IDs, and regions. It orchestrates the bootstrapping process for the
+    management, security audit, security log, and workload accounts, ensuring they all trust the Management account.
 
-- `boostrapAll(props: DataLandingZoneProps)` - Bootstraps all accounts (management, security audit, security log,
-  and workload accounts) in all regions.
-- `diffAll(props: DataLandingZoneProps)` - Runs `cdk diff "**"` to show differences for all stacks across all accounts and regions.
-- `diffSelect(props: DataLandingZoneProps, id: string)` - Runs `cdk diff "${id}"` to show differences for a selected stack using its ID.
-- `deployAll(props: DataLandingZoneProps)` - Deploys all stacks in all accounts and regions using `cdk deploy "**"`.
-- `deploySelect(props: DataLandingZoneProps, id: string)` - Deploys a selected stack using `cdk deploy "${id}"`.
-- `configureCostAllocationTags(props: DataLandingZoneProps)` - Sets the `mandatoryTags` and
-  `additionalMandatoryTags` properties as cost allocation tags.
+    #### Available Scripts
 
-More examples and pre-configured scripts are available in the
-[TypeScript Example GitHub Repo](https://github.com/DataChefHQ/aws-data-landing-zone-example-typescript). These can
-be copied and reused in your project. They contain pre-configured scripts for the most common stack
-selecting ids for the `diffSelect` and `deploySelect` functions.
+    - `boostrapAll(props: DataLandingZoneProps)` - Bootstraps all accounts (management, security audit, security log,
+      and workload accounts) in all regions.
+    - `diffAll(props: DataLandingZoneProps)` - Runs `cdk diff "**"` to show differences for all stacks across all accounts and regions.
+    - `diffSelect(props: DataLandingZoneProps, id: string)` - Runs `cdk diff "${id}"` to show differences for a selected stack using its ID.
+    - `deployAll(props: DataLandingZoneProps)` - Deploys all stacks in all accounts and regions using `cdk deploy "**"`.
+    - `deploySelect(props: DataLandingZoneProps, id: string)` - Deploys a selected stack using `cdk deploy "${id}"`.
+    - `configureCostAllocationTags(props: DataLandingZoneProps)` - Sets the `mandatoryTags` and
+      `additionalMandatoryTags` properties as cost allocation tags.
+    - `awsNuke(props: DataLandingZoneProps, relativeDir: string, awsNukeBinary: string, accountName: string, dryRun: boolean = true): Promise<void>;`
+       Runs AWS Nuke on the specified account. If the account is in the Suspended OU, it will delete all resources but
+       EXCLUDE the ControlTower and CDK Bootstrap resources. If the account is in the Workloads OU, it will additionally
+       EXCLUDE the DLZ resources. Parameters:
+        - `props` - The DLZ configuration.
+        - `relativeDir` - The directory of the script, used to build the full path to the AWS Nuke binary.
+        - `awsNukeBinary` - The path of the AWS Nuke binary, relative to the `relativeDir` parameter.
+        - `accountName` - The name of the account to run AWS Nuke on.
+        - `dryRun` - The default is `true`, which will only show the resources that would be deleted. Set to `false` to
+           delete the resources.
 
-Refer to the [Stack Patterns](/components/build-system/deployment-order#stacks-patterns) section for a full list of stack selecting IDs.
 
-### Python Usage
+    More examples and pre-configured scripts are available in the
+    [TypeScript Example GitHub Repo](https://github.com/DataChefHQ/aws-data-landing-zone-example-typescript). These can
+    be copied and reused in your project. They contain pre-configured scripts for the most common stack
+    selecting ids for the `diffSelect` and `deploySelect` functions.
 
-A complete example is available in the [Python Example GitHub Repo](https://github.com/DataChefHQ/aws-data-landing-zone-example-python)
+    Refer to the [Stack Patterns](/components/build-system/deployment-order#stacks-patterns) section for a full list of stack selecting IDs.
 
-The code snippets below are from:
+  </Fragment>
+  <Fragment slot="python">
 
-- [/scripts](https://github.com/DataChefHQ/aws-data-landing-zone-example-python/tree/main/scripts)
+    A complete example is available in the [Python Example GitHub Repo](https://github.com/DataChefHQ/aws-data-landing-zone-example-python)
 
-Here, we’ll explore a simple and straightforward approach to run the DLZ scripts in Python.
-Start by creating a `scripts` directory at the root of your project, and add individual Python files, each
-containing the specific DLZ `Scripts` you want to execute.
+    The code snippets below are from:
 
-```python
-// scripts/bootstrap.py
-from aws_data_landing_zone import Scripts
-from data_landing_zone_example_python.config_minimum import config
+    - [/scripts](https://github.com/DataChefHQ/aws-data-landing-zone-example-python/tree/main/scripts)
 
-scripts = Scripts()
-scripts.deploy_all(props=config)
-```
+    Here, we’ll explore a simple and straightforward approach to run the DLZ scripts in Python.
+    Start by creating a `scripts` directory at the root of your project, and add individual Python files, each
+    containing the specific DLZ `Scripts` you want to execute.
 
-You can then execute the script with:
-```
-python scripts/bootstrap.py
-```
+    ```python
+    // scripts/bootstrap.py
+    from aws_data_landing_zone import Scripts
+    from data_landing_zone_example_python.config_minimum import config
 
-The `bootstrapAll` function reads the DLZ configuration,
-including details such as AWS profiles, account IDs, and regions. It orchestrates the bootstrapping process for the
-management, security audit, security log, and workload accounts, ensuring they all trust the Management account.
+    scripts = Scripts()
+    scripts.deploy_all(props=config)
+    ```
 
-#### Available Scripts
+    You can then execute the script with:
+    ```
+    python scripts/bootstrap.py
+    ```
 
-- `boostrap_all(props: DataLandingZoneProps)` - Bootstraps all accounts (management, security audit, security log,
-  and workload accounts) in all regions.
-- `diff_all(props: DataLandingZoneProps)` - Runs `cdk diff "**"` to show differences for all stacks across all accounts and regions.
-- `diff_select(props: DataLandingZoneProps, id: string)` - Runs `cdk diff "${id}"` to show differences for a selected stack using its ID.
-- `deploy_all(props: DataLandingZoneProps)` - Deploys all stacks in all accounts and regions using `cdk deploy "**"`.
-- `deploy_select(props: DataLandingZoneProps, id: string)` - Deploys a selected stack using `cdk deploy "${id}"`.
-- `configure_cost_allocation_tags(props: DataLandingZoneProps)` - Sets the `mandatoryTags` and
-  `additionalMandatoryTags` properties as cost allocation tags.
+    The `bootstrapAll` function reads the DLZ configuration,
+    including details such as AWS profiles, account IDs, and regions. It orchestrates the bootstrapping process for the
+    management, security audit, security log, and workload accounts, ensuring they all trust the Management account.
 
-More examples and pre-configured scripts are available in the
-[Python Example GitHub Repo](https://github.com/DataChefHQ/aws-data-landing-zone-example-python). These can
-be copied and reused in your project. They contain pre-configured scripts for the most common stack
-selecting ids for the `diffSelect` and `deploySelect` functions.
+    #### Available Scripts
+
+    - `boostrap_all(props: DataLandingZoneProps)` - Bootstraps all accounts (management, security audit, security log,
+      and workload accounts) in all regions.
+    - `diff_all(props: DataLandingZoneProps)` - Runs `cdk diff "**"` to show differences for all stacks across all accounts and regions.
+    - `diff_select(props: DataLandingZoneProps, id: string)` - Runs `cdk diff "${id}"` to show differences for a selected stack using its ID.
+    - `deploy_all(props: DataLandingZoneProps)` - Deploys all stacks in all accounts and regions using `cdk deploy "**"`.
+    - `deploy_select(props: DataLandingZoneProps, id: string)` - Deploys a selected stack using `cdk deploy "${id}"`.
+    - `configure_cost_allocation_tags(props: DataLandingZoneProps)` - Sets the `mandatoryTags` and
+      `additionalMandatoryTags` properties as cost allocation tags.
+    - `aws_nuke(props: DataLandingZoneProps, relative_dir: str, aws_nuke_binary: str, account_name: str, dry_run: bool = True) -> None:`
+      Runs AWS Nuke on the specified account. If the account is in the Suspended OU, it will delete all resources but
+      EXCLUDE the ControlTower and CDK Bootstrap resources. If the account is in the Workloads OU, it will additionally
+      EXCLUDE the DLZ resources. Parameters:
+      - `props` - The DLZ configuration.
+      - `relative_dir` - The directory of the script, used to build the full path to the AWS Nuke binary.
+      - `aws_nuke_binary` - The path of the AWS Nuke binary, relative to the `relative_dir` parameter.
+      - `account_name` - The name of the account to run AWS Nuke on.
+      - `dry_run` - The default is `True`, which will only show the resources that would be deleted. Set to `False` to
+      delete the resources.
+
+    More examples and pre-configured scripts are available in the
+    [Python Example GitHub Repo](https://github.com/DataChefHQ/aws-data-landing-zone-example-python). These can
+    be copied and reused in your project. They contain pre-configured scripts for the most common stack
+    selecting ids for the `diffSelect` and `deploySelect` functions.
+
+  </Fragment>
+</DualCode>
+
+
 
 ## Commands (manual)
 
